--- a/pokemon.html
+++ b/pokemon.html
@@ -11,6 +11,7 @@
     <p>Escribe el nombre del pokemon: </p>
     <input type="text" id="inputNombre" placeholder="Introduce el Pokemon">
     <button id="buscarPokemon">Buscar pokemon</button>
+    <button id="limpiar">Limpiar</button>
     <div id="mensajeError"></div>
     <div id="resultado"></div>
     <script src="pokemon.js"></script>
